--- a/2. 일보출력 자동화.ipynb
+++ b/2. 일보출력 자동화.ipynb
@@ -37,30 +37,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "id": "897270f3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "오늘날짜 입력: 예) 20210708 >> 20210708\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-429efb144509>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    163\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    164\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 165\u001b[1;33m \u001b[0mprint_and_close\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    166\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    167\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-6-429efb144509>\u001b[0m in \u001b[0;36mprint_and_close\u001b[1;34m()\u001b[0m\n\u001b[0;32m     69\u001b[0m     \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# 출력되는 시간 보고 이후에 더 줄이기\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     70\u001b[0m     \u001b[1;31m#     pyautogui.click(click_print)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 71\u001b[1;33m     \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# 출력되는 시간 보고 이후에 더 줄이기\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     72\u001b[0m     \u001b[0mpyautogui\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclick\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mclick_close\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     73\u001b[0m     \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1.5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import pyautogui\n",
     "# import time\n",
@@ -189,8 +169,8 @@
     "    \n",
     "# def d_tab():\n",
     "#     '''tab키 2번'''\n",
-    "#     pyautogui.press('tab')\n",
-    "#     pyautogui.press('tab')\n",
+    "#     for i in range(2)\n",
+    "#         pyautogui.press('tab')\n",
     "\n",
     "\n",
     "# def sort_balance2():\n",
@@ -206,20 +186,21 @@
     "#     pyautogui.press('enter')\n",
     "\n",
     "\n",
-    "# '''팀별 영업집계표 출력'''\n",
+    "'''팀별 영업집계표 출력'''\n",
     "    \n",
-    "# ## 팀별 영업집계표 출력\n",
-    "# time.sleep(1)\n",
-    "# # pyautogui.click(team_sales)\n",
-    "# # time.sleep(2.5)\n",
-    "# pyautogui.click(click_blank)\n",
-    "# time.sleep(0.5)\n",
-    "# d_tab()\n",
-    "# pyautogui.press('down')\n",
-    "# time.sleep(0.5)\n",
-    "# find()\n",
-    "# time.sleep(2)\n",
-    "# print_and_close()\n",
+    "## 팀별 영업집계표 출력\n",
+    "time.sleep(1)\n",
+    "# pyautogui.click(team_sales)\n",
+    "# time.sleep(2.5)\n",
+    "pyautogui.click(click_blank)\n",
+    "time.sleep(0.5)\n",
+    "d_tab()\n",
+    "time.sleep(0.5)\n",
+    "pyautogui.press('down')\n",
+    "time.sleep(0.5)\n",
+    "find()\n",
+    "time.sleep(2)\n",
+    "print_and_close()\n",
     "\n",
     "\n",
     "\n",
@@ -290,12 +271,12 @@
     "# time.sleep(3)\n",
     "# pyautogui.click(click_blank)\n",
     "# time.sleep(1)\n",
-    "# for i in range(1, 4):\n",
+    "# for i in range(3):\n",
     "#     pyautogui.press('tab')\n",
     "# time.sleep(0.3)\n",
     "# pyautogui.press('down')\n",
     "# time.sleep(0.3)\n",
-    "# for i in range(1, 17):\n",
+    "# for i in range(16):\n",
     "#     pyautogui.press('tab')\n",
     "# pyautogui.press('down')\n",
     "# find()\n",
@@ -311,7 +292,7 @@
     "# pyautogui.click(order_status)\n",
     "# time.sleep(2.5)\n",
     "# pyautogui.click(click_blank)\n",
-    "# for i in range(1, 4):\n",
+    "# for i in range(3):\n",
     "#     pyautogui.press('tab')\n",
     "# pyautogui.press('down')\n",
     "# find()\n",
@@ -319,6 +300,8 @@
     "# time.sleep(2)\n",
     "# fit_and_print()\n",
     "# time.sleep(3)\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "# '''수금현황 출력'''\n",
@@ -371,35 +354,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "id": "3d72e618",
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''회계모듈이동'''\n",
-    "change_module()\n",
+    "# # '''기간별 미수금 현황 출력'''\n",
+    "# # # # 기간별 미수금 현황\n",
+    "# # pyautogui.click(click_blank)\n",
+    "# # pyautogui.click(balance_status)\n",
+    "# time.sleep(1)\n",
+    "# pyautogui.click(click_blank)\n",
+    "# time.sleep(0.5)\n",
+    "# d_tab()\n",
+    "# time.sleep(0.5)\n",
+    "# pyautogui.press('down')\n",
+    "# time.sleep(0.5)\n",
+    "# d_tab()\n",
+    "# for i in range (1, 25):\n",
+    "#     pyautogui.press('down')\n",
+    "# pyautogui.press('tab')\n",
+    "# pyautogui.press('down')\n",
+    "# pyautogui.press('down')\n",
+    "# pyautogui.click(comp_balance)\n",
+    "# time.sleep(1)\n",
+    "# find()\n",
+    "# time.sleep(5)\n",
+    "# sort_balance2()\n",
+    "# time.sleep(0.8)\n",
+    "# fit_and_print()\n",
+    "# time.sleep(3)\n",
     "\n",
-    "\n",
-    "'''부서별 세금계산서 출력'''\n",
-    "\n",
-    "# 회계모듈 부서별 세금계산서\n",
-    "\n",
-    "pyautogui.click(fin_team_tax)\n",
-    "time.sleep(2.5)\n",
-    "pyautogui.click(click_blank)\n",
-    "time.sleep(1)\n",
-    "pyautogui.press('tab')\n",
-    "time.sleep(1)\n",
-    "for i in range(84):\n",
-    "    pyautogui.press('up')\n",
-    "time.sleep(1)\n",
-    "find()\n",
-    "time.sleep(1)\n",
-    "print_and_close()\n",
-    "\n",
-    "\n",
-    "'''영업모듈로 이동'''\n",
-    "change_module()"
+    "\n"
    ]
   },
   {
@@ -424,13 +410,12 @@
    "source": [
     "'''여기부터 패키징'''\n",
     "## 팀별 영업집계표 출력\n",
-    "time.sleep(1)\n",
-    "pyautogui.click(team_sales)\n",
+    "# time.sleep(1)\n",
+    "# pyautogui.click(team_sales)\n",
     "time.sleep(2.5)\n",
     "pyautogui.click(click_blank)\n",
     "time.sleep(0.5)\n",
-    "d_tab()\n",
-    "for i in range(3):\n",
+    "for i in range(2):\n",
     "    pyautogui.press('down')\n",
     "time.sleep(0.5)\n",
     "find()\n",
@@ -461,7 +446,116 @@
     "\n",
     "\n",
     "'''영업모듈로 이동'''\n",
-    "change_module()"
+    "change_module()\n",
+    "\n",
+    "\n",
+    "'''거래명세표 출력'''\n",
+    "## 거래명세표\n",
+    "pyautogui.click(trade_acc)\n",
+    "time.sleep(3)\n",
+    "pyautogui.click(click_blank)\n",
+    "time.sleep(1)\n",
+    "five_tab()\n",
+    "d_tab()\n",
+    "for i in range(3):\n",
+    "    pyautogui.press('down')\n",
+    "time.sleep(1)\n",
+    "pyautogui.click(click_table)\n",
+    "time.sleep(1)\n",
+    "find()\n",
+    "time.sleep(4.5)\n",
+    "pyautogui.click(click_sel)\n",
+    "time.sleep(1)\n",
+    "print_and_close()\n",
+    "\n",
+    "\n",
+    "'''출하현황 출력'''\n",
+    "\n",
+    "# 출하현황\n",
+    "pyautogui.click(ship_status)\n",
+    "time.sleep(3)\n",
+    "pyautogui.click(click_blank)\n",
+    "time.sleep(1)\n",
+    "for i in range(3):\n",
+    "    pyautogui.press('tab')\n",
+    "time.sleep(0.3)\n",
+    "pyautogui.press('down')\n",
+    "pyautogui.press('down')\n",
+    "time.sleep(0.3)\n",
+    "for i in range(16):\n",
+    "    pyautogui.press('tab')\n",
+    "pyautogui.press('down')\n",
+    "find()\n",
+    "\n",
+    "time.sleep(5)\n",
+    "fit_and_print()\n",
+    "time.sleep(3)\n",
+    "\n",
+    "\n",
+    "\n",
+    "'''주문서 현황 출력'''\n",
+    "## 주문서 현황\n",
+    "time.sleep(1)\n",
+    "# pyautogui.click(order_status)\n",
+    "# time.sleep(2.5)\n",
+    "pyautogui.click(click_blank)\n",
+    "for i in range(3):\n",
+    "    pyautogui.press('tab')\n",
+    "pyautogui.press('down')\n",
+    "pyautogui.press('down')\n",
+    "find()\n",
+    "\n",
+    "time.sleep(2)\n",
+    "fit_and_print()\n",
+    "time.sleep(3)\n",
+    "\n",
+    "\n",
+    "'''수금현황 출력'''\n",
+    "# 수금현황\n",
+    "time.sleep(1)\n",
+    "# pyautogui.click(receipt_status)\n",
+    "# time.sleep(2.5)\n",
+    "pyautogui.click(click_blank)\n",
+    "d_tab()\n",
+    "pyautogui.press('down')\n",
+    "pyautogui.press('down')\n",
+    "time.sleep(1)\n",
+    "d_tab()\n",
+    "d_tab()\n",
+    "time.sleep(1)\n",
+    "pyautogui.typewrite(today)\n",
+    "find()\n",
+    "time.sleep(2.5)\n",
+    "print_and_close()\n",
+    "time.sleep(3)\n",
+    "\n",
+    "\n",
+    "'''기간별 미수금 현황 출력'''\n",
+    "# # 기간별 미수금 현황\n",
+    "pyautogui.click(click_blank)\n",
+    "pyautogui.click(balance_status)\n",
+    "time.sleep(1)\n",
+    "pyautogui.click(click_blank)\n",
+    "time.sleep(0.5)\n",
+    "d_tab()\n",
+    "time.sleep(0.5)\n",
+    "pyautogui.press('down')\n",
+    "pyautogui.press('down')\n",
+    "time.sleep(0.5)\n",
+    "d_tab()\n",
+    "for i in range (1, 25):\n",
+    "    pyautogui.press('down')\n",
+    "pyautogui.press('tab')\n",
+    "pyautogui.press('down')\n",
+    "pyautogui.press('down')\n",
+    "pyautogui.click(comp_balance)\n",
+    "time.sleep(1)\n",
+    "find()\n",
+    "time.sleep(5)\n",
+    "sort_balance2()\n",
+    "time.sleep(0.8)\n",
+    "fit_and_print()\n",
+    "time.sleep(3)"
    ]
   }
  ],
@@ -470,6 +564,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
